Se creó con Colab

--- a/Unidad1/Ejercicio_sesion1.ipynb
+++ b/Unidad1/Ejercicio_sesion1.ipynb
@@ -51,12 +51,12 @@
         "import re\n",
         "from spacy.matcher import Matcher\n",
         "import pkg_resources\n",
-        "warnings.filterwarnings('ignore')\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import nltk\n",
         "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
-        "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report"
+        "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
+        "warnings.filterwarnings('ignore')"
       ],
       "metadata": {
         "id": "lP-QxoelT3RV",
@@ -65,7 +65,7 @@
         },
         "outputId": "d29bd394-ccd4-4f22-f0a6-00eab79c0835"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -76,6 +76,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Detectamos si se esta ejecutando en Google Colab**"
+      ],
+      "metadata": {
+        "id": "Uj7vEvHP7mw7"
+      }
     },
     {
       "cell_type": "code",
@@ -101,7 +110,7 @@
         "id": "TiQLZakbI0wK",
         "outputId": "6514d073-b23c-489f-af0b-44e5a0da67ec"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -386,7 +395,7 @@
         "id": "Yg4UfMxjVNf1",
         "outputId": "66b6cee6-0534-4aba-b808-3376e38fa2fb"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -444,7 +453,7 @@
         "id": "hBT93svJXZ0X",
         "outputId": "5830456e-8b57-4ffd-e1bd-97b4ccc5e775"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -490,7 +499,7 @@
         "id": "V06h9kAaX2WU",
         "outputId": "747577e3-e382-4ba6-a161-6b0b519e0e7c"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -536,7 +545,7 @@
         "id": "cMJ2P1QReTVZ",
         "outputId": "301fd174-c748-4fa3-aec3-464cc09d1ab1"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -572,7 +581,7 @@
         "id": "QeZ3M955eqa0",
         "outputId": "5028b425-2d68-48da-c791-97e7eb3098cb"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -608,7 +617,7 @@
         "id": "pRZxDJNhe_xk",
         "outputId": "2548fa29-2c41-4500-cc2b-05b741ced613"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -647,7 +656,7 @@
         "id": "olv_STFefqlR",
         "outputId": "81fce105-0f97-41e6-d479-235124432c1e"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -690,7 +699,7 @@
       "metadata": {
         "id": "4zAS2ByQgHH6"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -706,7 +715,7 @@
         "id": "3pZgNx5cgwCe",
         "outputId": "4f68292d-8734-4d19-b5e5-93adde24f09b"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -745,7 +754,7 @@
         "id": "Gthy850Ng_xR",
         "outputId": "41375f4d-8992-4fde-918c-6bf4bd6d34df"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -785,7 +794,7 @@
         },
         "outputId": "1a2e74d9-0ef0-4cc8-e4d8-a1ef6197330b"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
