Se creó con Colab

--- a/Unidad1/Ejercicio_sesion1.ipynb
+++ b/Unidad1/Ejercicio_sesion1.ipynb
@@ -1043,9 +1043,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "---\n",
         "\n",
-        "# **CONCLUSIONES**\n",
+        "\n",
+        " **CONCLUSIONES**\n",
         "\n",
         "---"
       ],
@@ -1078,9 +1078,13 @@
     {
       "cell_type": "markdown",
       "source": [
+        "---\n",
+        "\n",
         "# **Clasificación de Sentimientos en Críticas Cinematográficas.**\n",
         "<div align=\"justify\">\n",
-        "Para esta práctica, realizaremos un análisis de sentimientos sobre reseñas de películas. El objetivo es clasificar cada reseña como positiva o negativa, aplicando técnicas de preprocesamiento de texto antes de entrenar o evaluar un modelo de clasificación."
+        "Para esta práctica, realizaremos un análisis de sentimientos sobre reseñas de películas. El objetivo es clasificar cada reseña como positiva o negativa, aplicando técnicas de preprocesamiento de texto antes de entrenar o evaluar un modelo de clasificación.\n",
+        "\n",
+        "---"
       ],
       "metadata": {
         "id": "DizXsg2rh0MK"
@@ -1089,7 +1093,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Creamos el documento desde el archivo filmreviews_sentiment.tsv**"
+        "**Creamos el documento desde el archivo filmreviews_sentiment.tsv**\n",
+        "\n",
+        "---"
       ],
       "metadata": {
         "id": "nQIOjxREer3M"
@@ -1142,7 +1148,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Empecemos por cargar el dataset:**"
+        "**Empecemos por cargar el dataset:**\n",
+        "\n",
+        "---"
       ],
       "metadata": {
         "id": "PzzxAao1iuoR"
@@ -1513,6 +1521,27 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Conteo de clases de sentimiento**\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "YcKeIfslnzZm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<div align=\"justify\">\n",
+        "Muestra la cantidad de reseñas positivas (pos) y negativas (neg) en el dataset, permitiendo inspeccionar la distribución de clases antes de realizar el análisis de sentimientos o entrenar un modelo de clasificación."
+      ],
+      "metadata": {
+        "id": "pAIMekGKn_d8"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "reviews.label.value_counts()"
@@ -1584,12 +1613,22 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Tenemos un dataset balanceado de casi mil ejemplares por cada clase.\n",
+        "**Descarga del léxico VADER**\n",
         "\n",
-        "Para hacer las cosas simples, vamos a utilizar un VADER para computar el puntaje de positivo o negativo. Este modelo ya viene implementado dentro de NLTK."
+        "---"
       ],
       "metadata": {
         "id": "Es6TO4AsjtY1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<div align=\"justify\">\n",
+        "Descarga el léxico de VADER necesario para el análisis de sentimientos con NLTK. El léxico contiene palabras con puntuaciones de polaridad que permiten al analizador determinar si un texto tiene un sentimiento positivo, negativo o neutral."
+      ],
+      "metadata": {
+        "id": "NBUYDKm7oZKv"
       }
     },
     {
@@ -1624,6 +1663,27 @@
           "execution_count": 14
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Cálculo de puntajes de sentimiento**\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "B_DpIWvroqk-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<div align=\"justify\">\n",
+        "Crea un analizador de sentimientos VADER (SentimentIntensityAnalyzer) y aplica su método polarity_scores a cada reseña. El resultado se guarda en una nueva columna scores, donde se incluyen las puntuaciones de sentimiento positivo, negativo, neutral y compuesto para cada texto. reviews.head() permite visualizar los primeros registros con los puntajes calculados."
+      ],
+      "metadata": {
+        "id": "0R4Ctz00ovtb"
+      }
     },
     {
       "cell_type": "code",
@@ -1944,10 +2004,22 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Con estos puntajes ahora podemos convertir el resultado en una etiqueta de predicción:"
+        "**Generación de predicciones de sentimiento**\n",
+        "\n",
+        "---"
       ],
       "metadata": {
         "id": "yo6avzvukHWF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<div align=\"justify\">\n",
+        "Extrae el puntaje compuesto (compound) de cada reseña a partir de los scores de VADER y genera una predicción binaria: pos si el puntaje es mayor a 0 y neg en caso contrario. reviews.head() muestra los primeros registros con las predicciones añadidas."
+      ],
+      "metadata": {
+        "id": "hi8Cd0-JpU5r"
       }
     },
     {
@@ -2281,10 +2353,22 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Y finalmente computar unas cuantas métricas de calidad del modelo:"
+        "**Evaluación del modelo de sentimiento**\n",
+        "\n",
+        "---"
       ],
       "metadata": {
         "id": "-jtVL56QkYvT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<div align=\"justify\">\n",
+        "Se compara las predicciones del analizador de sentimientos con las etiquetas reales. Calcula la precisión (accuracy), genera un reporte de clasificación con métricas detalladas y una matriz de confusión, permitiendo evaluar el desempeño del modelo de manera completa."
+      ],
+      "metadata": {
+        "id": "BV0TYdckpyiU"
       }
     },
     {
